@@ -1,3 +1,12 @@
+Fri Sep 10 15:24:44 1999  Loic Dachary  <loic@ceic.com>
+
+	* htdig/Retriever.cc: change static WordList words to
+	  object member. words.Close() at end of Start function
+	  to make sure data is flushed by database.
+
+	* htcommon/WordList.cc (Close): test isopen to prevent
+	  ugly crash. Remove isopen test in calling functions.
+
 Fri Sep 10 13:45:53 1999  Loic Dachary  <loic@ceic.com>
 
 	* htcommon/WordList.h htcommon/WordList.cc: methods Collect
